fix contrast

--- a/04/css/styles.css
+++ b/04/css/styles.css
@@ -410,7 +410,7 @@ main {
 }
 
 main h1 {
-  color: #6e4833;
+  color: #B67E51;
   font-weight: 600;
 }
 
@@ -430,7 +430,7 @@ main .card {
   border-radius: 10px;
 }
 main .card h2 {
-  background-color: #B67E51;
+  background-color: #6e4833;
   color: #fff;
   width: 100%;
   padding: 0.75rem 0;
