--- a/04/sass/_small.scss
+++ b/04/sass/_small.scss
@@ -92,7 +92,7 @@ main {
   min-height: 10rem;
 }
 main h1 {
-  color: $darker-brown;
+  color: $lighter-brown;
   font-weight: 600;
 }
 main .cardDeck {
@@ -109,7 +109,7 @@ main .card {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   h2 {
-    background-color: $lighter-brown;
+    background-color: $darker-brown;
     color: #fff;
     width: 100%;
     padding: 0.75rem 0;
